<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"

     xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    >
    
       <RadioGroup
            android:id="@+id/testMode"
            android:layout_width="wrap_content"
       		android:layout_height="wrap_content">
       <RadioButton
        android:id="@+id/radioButton_Browser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/radioButton_Browser"
        android:textSize="20sp"
        android:textStyle="bold"   />

    <RadioButton
        android:id="@+id/radioButton_youtube"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/testMode"
        android:layout_toRightOf="@+id/radioButton1"
        android:layout_alignParentLeft="true"
        android:text="@string/radioButton_youtube" 
        android:textSize="20sp"
        android:textStyle="bold"  />
   
    <RadioButton
        android:id="@+id/radioButton_com_cibn_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/testMode"
        android:layout_toRightOf="@+id/radioButton1"
        android:layout_alignParentLeft="true"
        android:text="@string/radioButton_com_cibn_tv" 
        android:textSize="20sp"
        android:textStyle="bold"  />
     </RadioGroup>



        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/testMode"
            android:text="@string/lb_number"
            android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/runtime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:inputType="number" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
         android:layout_below="@+id/runtime"
        android:text="@string/lb_duration"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:layout_below="@+id/textView2">

        <EditText
            android:id="@+id/duration1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="number" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/lb_to"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/duration2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="number" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:layout_below="@+id/linearLayout1">

        <Button
            android:id="@+id/button_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="startBrowsing"
            android:text="@string/btn_start" />

        <Button
            android:id="@+id/button_stop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="stopBrowsing"
            android:text="@string/btn_stop" />
    </LinearLayout>

   

</RelativeLayout>

